// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

import (
	"time"
)

const TableNameDomainContact = "domain_contact"

// DomainContact mapped from table <domain_contact>
type DomainContact struct {
	CreatedDate         *time.Time `gorm:"column:created_date;type:timestamp with time zone;default:now()" json:"created_date"`
	UpdatedDate         *time.Time `gorm:"column:updated_date;type:timestamp with time zone" json:"updated_date"`
	CreatedBy           *string    `gorm:"column:created_by;type:text;default:CURRENT_USER" json:"created_by"`
	UpdatedBy           *string    `gorm:"column:updated_by;type:text" json:"updated_by"`
	ID                  string     `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
	DomainID            string     `gorm:"column:domain_id;type:uuid;not null" json:"domain_id"`
	ContactID           string     `gorm:"column:contact_id;type:uuid;not null" json:"contact_id"`
	DomainContactTypeID string     `gorm:"column:domain_contact_type_id;type:uuid;not null" json:"domain_contact_type_id"`
	IsLocalPresence     bool       `gorm:"column:is_local_presence;type:boolean;not null" json:"is_local_presence"`
	IsPrivacyProxy      bool       `gorm:"column:is_privacy_proxy;type:boolean;not null" json:"is_privacy_proxy"`
	Handle              string     `gorm:"column:handle;type:text;not null" json:"handle"`
}

// TableName DomainContact's table name
func (*DomainContact) TableName() string {
	return TableNameDomainContact
}
