// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

import (
	"github.com/jmoiron/sqlx/types"
	"time"
)

const TableNameProvisionContact = "provision_contact"

// ProvisionContact mapped from table <provision_contact>
type ProvisionContact struct {
	CreatedDate      *time.Time     `gorm:"column:created_date;type:timestamp with time zone;default:now()" json:"created_date"`
	UpdatedDate      *time.Time     `gorm:"column:updated_date;type:timestamp with time zone" json:"updated_date"`
	CreatedBy        *string        `gorm:"column:created_by;type:text;default:CURRENT_USER" json:"created_by"`
	UpdatedBy        *string        `gorm:"column:updated_by;type:text" json:"updated_by"`
	ID               string         `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
	AccreditationID  string         `gorm:"column:accreditation_id;type:uuid;not null" json:"accreditation_id"`
	TenantCustomerID string         `gorm:"column:tenant_customer_id;type:uuid;not null" json:"tenant_customer_id"`
	ProvisionedDate  *time.Time     `gorm:"column:provisioned_date;type:timestamp with time zone" json:"provisioned_date"`
	StatusID         string         `gorm:"column:status_id;type:uuid;not null;default:tc_id_from_name('provision_status'::text, 'pending'::text)" json:"status_id"`
	Roid             *string        `gorm:"column:roid;type:text" json:"roid"`
	JobID            *string        `gorm:"column:job_id;type:uuid" json:"job_id"`
	OrderItemPlanIds *string        `gorm:"column:order_item_plan_ids;type:uuid[]" json:"order_item_plan_ids"`
	ResultMessage    *string        `gorm:"column:result_message;type:text" json:"result_message"`
	ResultData       types.JSONText `gorm:"column:result_data;type:jsonb" json:"result_data"`
	ContactID        string         `gorm:"column:contact_id;type:uuid;not null" json:"contact_id"`
	Handle           *string        `gorm:"column:handle;type:text" json:"handle"`
	Pw               string         `gorm:"column:pw;type:text;not null;default:tc_gen_password(16)" json:"pw"`
}

// TableName ProvisionContact's table name
func (*ProvisionContact) TableName() string {
	return TableNameProvisionContact
}
